--- a/src/css/common.css
+++ b/src/css/common.css
@@ -137,7 +137,7 @@ h4 {
 }
 
 .container {
-  width: 60%;
+  width: 40%;
   min-width: 500px;
   background-color: #d6daff;
   padding: 15px;
@@ -147,8 +147,8 @@ h4 {
 }
 
 .DiaryList h2 {
-  font-size: 1.25em;
   padding-left: 0.75em;
+  margin-bottom: 0.5em;
 }
 .DiaryList .wrapper {
   width: 100%;
@@ -158,9 +158,12 @@ h4 {
   position: relative;
 }
 .DiaryList .wrapper .slideBtn {
+  height: 100%;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+  z-index: 100;
+  background-color: white;
 }
 .DiaryList .wrapper .slideBtn.leftBtn {
   left: 0;
@@ -171,6 +174,10 @@ h4 {
 .DiaryList .wrapper .slideBtn svg {
   width: 2em;
   height: 2em;
+  color: #8a93ff;
+}
+.DiaryList .wrapper .slideBtn:hover svg {
+  color: #383f8f;
 }
 .DiaryList .slideWrapper {
   width: 400%;
@@ -178,11 +185,39 @@ h4 {
   justify-content: space-between;
   align-items: stretch;
   flex-wrap: nowrap;
+  transition: 0.7s all ease-out;
+}
+.DiaryList .slideWrapper.slide1 {
+  transform: translateX(-25%);
+}
+.DiaryList .slideWrapper.slide2 {
+  transform: translateX(-50%);
+}
+.DiaryList .slideWrapper.slide3 {
+  transform: translateX(-75%);
+}
+.DiaryList .slideWrapper.slide4 {
+  transform: translateX(-100%);
 }
 .DiaryList .DiaryItem {
   width: 100%;
-  padding: 1em 1.5em;
+  padding: 1em 2.5em;
   box-sizing: border-box;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+.DiaryList .DiaryItem .content {
+  flex-grow: 1;
+}
+.DiaryList .DiaryItem .titleDesc {
+  display: block;
+  font-size: 0.8em;
+  margin-bottom: 2em;
+}
+.DiaryList .DiaryItem .titleDesc::after, .DiaryList .DiaryItem .titleDesc::before {
+  content: "-";
 }
 .DiaryList .DiaryItem .title {
   display: flex;
@@ -194,16 +229,18 @@ h4 {
 .DiaryList .DiaryItem .title svg {
   width: 2em;
   height: 2em;
-  margin-right: 1em;
+  margin-right: 0.5em;
 }
 .DiaryList .DiaryItem .title h3 {
   font-size: 20px;
 }
-.DiaryList .DiaryItem p {
+.DiaryList .DiaryItem .desc {
   padding: 1em;
   border-radius: 5px;
   background-color: #383f8f;
   color: #d6daff;
+  word-break: keep-all;
+  overflow-wrap: break-word;
 }
 
 /*# sourceMappingURL=common.css.map */
