--- a/src/scss/_diaryList.scss
+++ b/src/scss/_diaryList.scss
@@ -2,8 +2,8 @@
 
 .DiaryList {
   h2 {
-    font-size: 1.25em;
     padding-left: 0.75em;
+    margin-bottom: 0.5em;
   }
   .wrapper {
     width: 100%;
@@ -12,9 +12,13 @@
     overflow: hidden;
     position: relative;
     .slideBtn {
+      height: 100%;
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
+      z-index: 100;
+      background-color: white;
+
       &.leftBtn {
         left: 0;
       }
@@ -24,34 +28,66 @@
       svg {
         width: 2em;
         height: 2em;
+        color: nth($purple, 1);
+      }
+      &:hover svg {
+        color: nth($purple, 2);
       }
     }
   }
   .slideWrapper {
     width: 400%;
     @include flex;
+    transition: 0.7s all ease-out;
+    &.slide1 {
+      transform: translateX(-25%);
+    }
+    &.slide2 {
+      transform: translateX(-50%);
+    }
+    &.slide3 {
+      transform: translateX(-75%);
+    }
+    &.slide4 {
+      transform: translateX(-100%);
+    }
   }
   .DiaryItem {
     width: 100%;
-    padding: 1em 1.5em;
+    padding: 1em 2.5em;
     box-sizing: border-box;
+    @include flex($a: center, $j: start);
+    .content {
+      flex-grow: 1;
+    }
+    .titleDesc {
+      display: block;
+      font-size: 0.8em;
+      margin-bottom: 2em;
+      &::after,
+      &::before {
+        content: "-";
+      }
+    }
     .title {
       @include flex($a: center, $j: start);
       margin-bottom: 1em;
       svg {
         width: 2em;
         height: 2em;
-        margin-right: 1em;
+        margin-right: 0.5em;
       }
       h3 {
         font-size: 20px;
       }
     }
-    p {
+    .desc {
       padding: 1em;
       border-radius: 5px;
       background-color: nth($purple, 2);
       color: nth($gray, 1);
+      word-break: keep-all;
+      overflow-wrap: break-word;
     }
   }
 }
