--- a/src/scss/_diaryList.scss
+++ b/src/scss/_diaryList.scss
@@ -1,5 +1,4 @@
 @charset "utf-8";
-
 .DiaryList {
   h2 {
     padding-left: 0.75em;
@@ -43,9 +42,30 @@
     width: 100%;
     padding: 1em 2.5em;
     box-sizing: border-box;
-    @include flex($a: center, $j: start);
-    .content {
-      flex-grow: 1;
+    header {
+      @include flex($a: center);
+      margin-bottom: 1em;
+      .title {
+        @include flex($a: center, $j: start);
+
+        svg {
+          width: 2em;
+          height: 2em;
+          margin-right: 0.5em;
+        }
+        h3 {
+          font-size: 20px;
+        }
+      }
+      .btns {
+        @include flex($a: center, $j: end);
+        button {
+          margin: 0px 10px;
+        }
+        &.hide {
+          @extend .hide;
+        }
+      }
     }
     .titleDesc {
       display: block;
@@ -56,18 +76,7 @@
         content: "-";
       }
     }
-    .title {
-      @include flex($a: center, $j: start);
-      margin-bottom: 1em;
-      svg {
-        width: 2em;
-        height: 2em;
-        margin-right: 0.5em;
-      }
-      h3 {
-        font-size: 20px;
-      }
-    }
+
     .desc {
       padding: 1em;
       border-radius: 5px;
