--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -9,4 +9,8 @@
   margin: 10px auto;
   box-sizing: border-box;
   border-radius: 5px;
+  h1 {
+    padding-left: 0.75em;
+    margin-bottom: 0.5em;
+  }
 }
