--- a/src/scss/_diaryList.scss
+++ b/src/scss/_diaryList.scss
@@ -1,43 +1,42 @@
 @charset "utf-8";
 .DiaryList {
-  h2 {
-    padding-left: 0.75em;
-    margin-bottom: 0.5em;
-  }
-  .wrapper {
-    width: 100%;
-    background-color: white;
-    border-radius: 5px;
-    overflow: hidden;
-    position: relative;
-    .slideBtn {
-      height: 100%;
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      z-index: 100;
-      background-color: white;
+  background-color: white;
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
 
-      &.leftBtn {
-        left: 0;
-      }
-      &.rightBtn {
-        right: 0;
-      }
-      svg {
-        width: 2em;
-        height: 2em;
-        color: nth($purple, 1);
-      }
-      &:hover svg {
-        color: nth($purple, 2);
-      }
+  .slideBtn {
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 100;
+    background-color: white;
+    &.leftBtn {
+      left: 0;
+    }
+    &.rightBtn {
+      right: 0;
+    }
+    svg {
+      width: 2em;
+      height: 2em;
+      color: nth($purple, 1);
+    }
+    &:hover svg {
+      color: nth($purple, 2);
     }
   }
+
   .slideWrapper {
     @include flex($a: center);
-    transition: 0.7s all ease-out;
+    transition: 0.7s transform ease-out;
   }
+
+  .noneData {
+    padding: 1.5em 1em;
+  }
+
   .DiaryItem {
     width: 100%;
     padding: 1em 2.5em;
@@ -53,7 +52,7 @@
           margin-right: 0.5em;
         }
         h3 {
-          font-size: 20px;
+          font-size: 1.25em;
         }
       }
       .btns {
@@ -84,8 +83,5 @@
       word-break: keep-all;
       overflow-wrap: break-word;
     }
-  }
-  .space {
-    padding: 1.5em 1em;
   }
 }
