코드 리펙토링, type 및 props 대신 contextAPI 방식으로 모든 데이터 전송

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -152,6 +152,7 @@ h4 {
 }
 .container h1 {
   padding-left: 0.75em;
+  flex: 1;
 }
 
 .DiaryList {
@@ -1187,6 +1188,11 @@ h4 {
   border: none;
   padding: 0.3em;
   border-radius: 5px;
+}
+
+.calender {
+  text-align: center;
+  margin-right: 1em;
 }
 
 /*# sourceMappingURL=common.css.map */
