--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -85,6 +85,11 @@ button {
   font-size: inherit;
   color: inherit;
 }
+textarea,
+input {
+  font-size: inherit;
+  font-family: inherit;
+}
 
 .blind,
 hr,
