--- a/src/css/common.css
+++ b/src/css/common.css
@@ -148,9 +148,9 @@ h4 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 1em 1em 0.3125em;
+  padding: 1em 1.2em 0.3125em;
   box-sizing: border-box;
-  border-radius: 5px;
+  border-radius: 10px;
   background: url("../assets/background.jpg") no-repeat top/120%;
   translate: all 1s;
 }
@@ -179,10 +179,10 @@ h4 {
 .container .nav li svg {
   width: 1.5em;
   height: 1.5em;
-  color: white;
+  color: #383f8f;
 }
 .container .nav li input:checked + label svg {
-  color: #383f8f;
+  color: white;
 }
 
 @media screen and (max-width: 1024px) {
@@ -287,6 +287,9 @@ h4 {
   word-break: keep-all;
   overflow-wrap: break-word;
 }
+.DiaryList .DiaryItem .desc .lineBreak {
+  line-height: 1.8;
+}
 
 .DiaryEditor {
   margin-bottom: 2em;
@@ -332,7 +335,7 @@ h4 {
   resize: none;
   color: #383f8f;
   white-space: pre-line;
-  line-height: 1.2;
+  line-height: 1.3;
 }
 .DiaryEditor textarea:focus {
   outline: 1px solid #383f8f;
