--- a/src/scss/_diaryList.scss
+++ b/src/scss/_diaryList.scss
@@ -88,6 +88,9 @@
       color: white;
       word-break: keep-all;
       overflow-wrap: break-word;
+      .lineBreak {
+        line-height: 1.8;
+      }
     }
   }
 }
